--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,16 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+<div>
+    <div sec:authorize="!isAuthenticated()">
+        <h4><a href="/login">Войти</a></h4>
+        <h4><a href="/registration">Зарегистрироваться</a></h4>
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <h4><a href="/logout">Выйти</a></h4>
+    </div>
+    <h4 sec:authorize="hasRole('ROLE_USER')"><a href="/user">Профиль</a></h4>
+    <h4 sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin">Пользователи</a></h4>
+</div>
 </body>
 </html>
