--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Изменить пользователя</title>
-</head>
-<body>
-<b>Изменить пользователя</b>
-<br>
-<form action="#"
-      th:action="@{/admin/{id}(id=${user.getId()})}"
-      th:object="${user}"
-      method="post">
-    <label for="firstname">Name</label>
-    <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
-    <br>
-    <label for="mail">Email</label>
-    <input type="text" th:field="*{email}" id="mail" placeholder="Email">
-    <br>
-    <label for="password">Password</label>
-    <input type="text" th:field="*{password}" id="password" placeholder="Password">
-    <br>
-    <label for="roles">Role</label>
-    <input type="text" th:field="*{roles}" id="roles" placeholder="Roles">
-    <br>
-    <input type="submit" value="Сохранить">
-</form>
-<form method="get" th:action="@{/admin/delete/{id}(id=${user.getId()})}" th:object="${user}">
-    <input type="hidden" th:field="*{id}"/>
-    <button type="submit">Удалить</button>
-</form>
+    <head>
+        <meta charset="UTF-8">
+        <title>Изменить пользователя</title>
+    </head>
+    <body>
+        <b>Изменить пользователя</b>
+        <br>
+        <form action="#"
+              th:action="@{/admin/{id}(id=${user.getId()})}"
+              th:object="${user}"
+              method="post">
+            <label for="firstname">Name</label>
+            <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
+            <br>
 
-</body>
+            <label for="mail">Email</label>
+            <input type="text" th:field="*{email}" id="mail" placeholder="Email">
+            <br>
+
+            <label for="password">Password</label>
+            <input type="password" th:field="*{password}" id="password" placeholder="Password">
+            <br>
+
+            <label for="roles">Role</label>
+            <input type="text" th:field="*{roles}" id="roles" placeholder="Roles">
+            <br>
+
+            <input type="submit" value="Сохранить">
+        </form>
+        <form method="get" th:action="@{/admin/delete/{id}(id=${user.getId()})}" th:object="${user}">
+            <input type="hidden" th:field="*{id}"/>
+            <button type="submit">Удалить</button>
+        </form>
+    </body>
 </html>
