--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
     <head>
-        <meta charset="UTF-8">
         <title>Изменить пользователя</title>
     </head>
     <body>
-        <b>Изменить пользователя</b>
-        <br>
-        <form action="#"
-              th:action="@{/admin/{id}(id=${user.getId()})}"
-              th:object="${user}"
-              method="post">
-            <label for="firstname">Name</label>
-            <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
+        <div layout:fragment="content">
+            <b>Изменить пользователя</b>
             <br>
+            <form action="#"
+                  th:action="@{/admin/{id}(id=${user.getId()})}"
+                  th:object="${user}"
+                  method="post">
+                <label for="firstname">Name</label>
+                <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
+                <br>
 
-            <label for="mail">Email</label>
-            <input type="text" th:field="*{email}" id="mail" placeholder="Email">
-            <br>
+                <label for="mail">Email</label>
+                <input type="text" th:field="*{email}" id="mail" placeholder="Email">
+                <br>
 
-            <label for="password">Password</label>
-            <input type="password" th:field="*{password}" id="password" placeholder="Password">
-            <br>
+                <label for="password">Password</label>
+                <input type="password" th:field="*{password}" id="password" placeholder="Password">
+                <br>
 
-            <label for="roles">Role</label>
-            <input type="text" th:field="*{roles}" id="roles" placeholder="Roles">
-            <br>
+                <label for="roles">Roles:</label>
+                <select id="roles" multiple="multiple" th:field="*{roles}">
+                    <option th:each="role: ${rolesFromDb}" th:value="${role.getId()}" th:text="${role.getName()}"></option>
+                </select>
+                <br>
+                <br>
 
-            <input type="submit" value="Сохранить">
-        </form>
-        <form method="get" th:action="@{/admin/delete/{id}(id=${user.getId()})}" th:object="${user}">
-            <input type="hidden" th:field="*{id}"/>
-            <button type="submit">Удалить</button>
-        </form>
+                <input type="submit" value="Сохранить">
+            </form>
+            <form method="get" th:action="@{/admin/delete/{id}(id=${user.getId()})}" th:object="${user}">
+                <input type="hidden" th:field="*{id}"/>
+                <button type="submit">Удалить</button>
+            </form>
+        </div>
     </body>
 </html>
