--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <meta charset="UTF-8">
         <title>Изменить пользователя</title>
     </head>
     <body>
-        <a href="/user">Назад</a>
-        <br>
-        <b>Изменить пользователя</b>
-        <br>
-        <form action="#"
-              th:action="@{/user/{id}(id=${user.getId()})}"
-              th:object="${user}"
-              method="post">
-            <label for="firstname">Name</label>
-            <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
+        <div layout:fragment="content">
+            <b>Изменить пользователя</b>
             <br>
+            <form action="#"
+                  th:action="@{/user/{id}(id=${user.getId()})}"
+                  th:object="${user}"
+                  method="post">
+                <label for="firstname">Name</label>
+                <input type="text" th:field="*{username}" id="firstname" placeholder="Name">
+                <br>
 
-            <label for="mail">Email</label>
-            <input type="text" th:field="*{email}" id="mail" placeholder="Email">
-            <br>
+                <label for="mail">Email</label>
+                <input type="text" th:field="*{email}" id="mail" placeholder="Email">
+                <br>
 
-            <label for="password">Password</label>
-            <input type="password" th:field="*{password}" id="password" placeholder="Password">
-            <br>
-
-            <input type="submit" value="Сохранить">
-        </form>
+                <label for="password">Password</label>
+                <input type="password" th:field="*{password}" id="password" placeholder="Password">
+                <br>
+                <input type="submit" value="Сохранить">
+            </form>
+        </div>
     </body>
 </html>
