--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <meta charset="UTF-8">
         <title>Новый пользователь</title>
     </head>
     <body>
-        <b>Добавить пользователя</b>
-        <br>
-        <form th:method="POST" th:action="@{/admin}" th:object="${user}">
-            <label for="name">Имя:</label>
-            <input type="text" th:field="*{username}" id="name"/>
+        <div layout:fragment="content">
+            <b>Добавить пользователя</b>
             <br>
+            <form th:method="POST" th:action="@{/admin}" th:object="${user}">
+                <label for="name">Имя:</label>
+                <input type="text" th:field="*{username}" id="name"/>
+                <br>
 
-            <label for="email">Email:</label>
-            <input type="email" th:field="*{email}" id="email"/>
-            <br>
+                <label for="email">Email:</label>
+                <input type="email" th:field="*{email}" id="email"/>
+                <br>
 
-            <label for="password">Password:</label>
-            <input type="text" th:field="*{password}" id="password"/>
-            <br>
+                <label for="password">Password:</label>
+                <input type="text" th:field="*{password}" id="password"/>
+                <br>
 
-            <label for="roles">Roles:</label>
-            <input type="text" th:field="*{roles}" id="roles"/>
-            <br>
-            <br>
-
-            <input type="submit" value="Добавить">
-        </form>
+                <label for="roles">Roles:</label>
+                <select id="roles" multiple="multiple" th:field="*{roles}">
+                    <option th:each="role: ${rolesFromDb}" th:value="${role.getId()}" th:text="${role.getName()}"></option>
+                </select>
+                <br>
+                <br>
+                <input type="submit" value="Добавить">
+            </form>
+        </div>
     </body>
 </html>
