--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>[[#{home.index.headline}]]</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <title>Home page</title>
     </head>
     <body>
         <div layout:fragment="content">
-            <h1 class="mb-4">[[#{home.index.headline}]]</h1>
-            <p class="mb-5">[(#{home.index.text})]</p>
+            <a href="/user" sec:authorize="isAuthenticated()">Страница User</a>
+            <br>
+            <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Страница Admin</a>
         </div>
     </body>
 </html>
