--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
   <head>
-      <meta charset="UTF-8">
       <title>Регистрация</title>
   </head>
   <body>
-    <b>Регистрация</b>
-    <br>
-    <form th:method="POST" th:action="@{/registration}" th:object="${userForm}">
-        <label for="name">Имя:</label>
-        <input type="text" th:field="*{username}" id="name"/>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" th:field="*{email}" id="email"/>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" th:field="*{password}" id="password"/>
-        <br>
-        <br>
-        <input type="submit" value="Подтвердить">
-        <br>
-        <a href="/login">Вход для зарегистрированных</a>
-    </form>
+  <div layout:fragment="content">
+      <b>Регистрация</b>
+      <br>
+      <form th:method="POST" th:action="@{/registration}" th:object="${userForm}">
+          <label for="name">Имя:</label>
+          <input type="text" th:field="*{username}" id="name"/>
+          <br>
+          <label for="email">Email:</label>
+          <input type="email" th:field="*{email}" id="email"/>
+          <br>
+          <label for="password">Password:</label>
+          <input type="password" th:field="*{password}" id="password"/>
+          <br>
+          <br>
+          <input type="submit" value="Подтвердить">
+          <br>
+          <a href="/login">Вход для зарегистрированных</a>
+      </form>
+  </div>
   </body>
 </html>
