--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
-<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
         <title>Home page</title>
     </head>
     <body>
         <div layout:fragment="content">
-            <a href="/user" sec:authorize="isAuthenticated()">Страница User</a>
-            <br>
-            <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')">Страница Admin</a>
+            <div>
+                <h1>Главная страница</h1>
+            </div>
         </div>
     </body>
 </html>
