--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,14 +2,14 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org">
     <head>
-        <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">MyApp</title>
+        <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">[[#{app.title}]]</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" rel="stylesheet" />
-        <link th:href="@{/css/app.css}" rel="stylesheet" />
-        <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
-        <script th:src="@{/js/app.js}" defer></script>
+        <script th:src="@{/js/jquery-3.7.1.min.js}" defer></script>
+        <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}" defer></script>
+        <script th:src="@{/js/main.js}" src="../static/js/main.js" defer></script>
     </head>
     <body>
         <header class="bg-dark">
@@ -40,12 +40,16 @@
                 </nav>
             </div>
         </header>
-        <main class="my-5">
+        <main>
             <div class="container">
-                <p th:if="${MSG_SUCCESS}" class="alert alert-success mb-4" role="alert">[[${MSG_SUCCESS}]]</p>
-                <p th:if="${MSG_INFO}" class="alert alert-info mb-4" role="alert">[[${MSG_INFO}]]</p>
-                <p th:if="${MSG_ERROR}" class="alert alert-danger mb-4" role="alert">[[${MSG_ERROR}]]</p>
-                <div layout:fragment="content" />
+                <div class="row" style="min-height: 100vh">
+                    <div class="col-2 nav flex-column nav-pills py-3" role="tablist" aria-orientation="vertical">
+                        <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" th:class="${activePage == 'admin'} ? 'nav-link active' : 'nav-link'" data-toggle="tab" role="tab">Страница Admin</a>
+                        <a href="/user" sec:authorize="isAuthenticated()" th:class="${activePage == 'user'} ? 'nav-link active' : 'nav-link'" data-toggle="tab" role="tab">Страница User</a>
+                    </div>
+
+                    <div class="col-10 bg-light py-3" layout:fragment="content" />
+                </div>
             </div>
         </main>
     </body>
