--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org">
   <head>
       <title>Регистрация</title>
   </head>
   <body>
-  <div layout:fragment="content">
-      <b>Регистрация</b>
-      <br>
-      <form th:method="POST" th:action="@{/registration}" th:object="${userForm}">
-          <label for="name">Имя:</label>
-          <input type="text" th:field="*{username}" id="name"/>
-          <br>
-          <label for="email">Email:</label>
-          <input type="email" th:field="*{email}" id="email"/>
-          <br>
-          <label for="password">Password:</label>
-          <input type="password" th:field="*{password}" id="password"/>
-          <br>
-          <br>
-          <input type="submit" value="Подтвердить">
-          <br>
-          <a href="/login">Вход для зарегистрированных</a>
-      </form>
-  </div>
+      <div layout:fragment="content">
+          <h1>Регистрация</h1>
+          <div class="border container text-center bg-white">
+              <div class="row justify-content-md-center m-3">
+                  <div class="col col-5">
+                      <form th:method="POST" th:action="@{/registration}" th:object="${userForm}">
+                          <div class="form-group mb-3">
+                              <label for="name" class="form-label"><b>Имя:</b></label>
+                              <input type="text" th:field="*{username}" id="name" class="form-control"/>
+                          </div>
+
+                          <div class="form-group mb-3">
+                              <label for="email" class="form-label"><b>Email:</b></label>
+                              <input type="email" th:field="*{email}" id="email" class="form-control"/>
+                          </div>
+
+                          <div class="form-group mb-3">
+                              <label for="password" class="form-label"><b>Password:</b></label>
+                              <input type="password" th:field="*{password}" id="password" class="form-control"/>
+                          </div>
+                          <button type="submit" class="btn btn-success">Подтвердить</button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
   </body>
 </html>
