--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org">
     <head>
         <title>Карточка пользователя</title>
     </head>
     <body>
         <div layout:fragment="content">
-<!--            <b>Карточка пользователя</b>-->
-<!--            <br>-->
-<!--            <p th:text="${user.getId()}"></p>-->
-<!--            <p th:text="${user.getUsername()}"></p>-->
-<!--            <p th:text="${user.getEmail()}"></p>-->
-<!--            <br>-->
-<!--            <a th:href="@{/user/{id}/edit(id=${user.getId()})}">Изменить</a>-->
-
             <h1>User-information page</h1>
 
             <div class="border p-3">
