--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -22,10 +22,10 @@
 
                     <tbody>
                     <tr>
-                        <td th:text="${user.getId()}"></td>
-                        <td th:text="${user.getUsername()}"></td>
-                        <td th:text="${user.getEmail()}"></td>
-                        <td th:text="${user.getRoles()}"></td>
+                        <td th:text="${userFromPrincipal.getId()}"></td>
+                        <td th:text="${userFromPrincipal.getUsername()}"></td>
+                        <td th:text="${userFromPrincipal.getEmail()}"></td>
+                        <td th:text="${userFromPrincipal.getRoles()}"></td>
                     </tr>
                     </tbody>
                 </table>
