--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <title>Admin</title>
+    <title>Admin panel</title>
 </head>
 <body>
 <div layout:fragment="content">
@@ -20,45 +20,68 @@
     </div>
 
     <div class="p-3 bg-white border">
-        <table class="table table-striped border-top">
-            <thead>
-            <th>ID</th>
-            <th>UserName</th>
-            <th>Email</th>
-            <th>Roles</th>
-            <th>Edit</th>
-            <th>Delete</th>
-            </thead>
 
-            <tbody>
-            <tr th:each="user : ${users}">
-                <td th:text="${user.getId()}"></td>
-                <td th:text="${user.getUsername()}"></td>
-                <td th:text="${user.getEmail()}"></td>
-                <td><span th:each="role: ${user.getRoles()}" th:text="${#strings.replace(role.getName(), 'ROLE_', ' ')}"></span></td>
-                <td>
-                    <!-- Btn for edit user -->
-                    <a type="button"
-                       class="btn btn-info"
-                       data-bs-toggle="modal"
-                       th:attr="data-bs-target=${'#edituser' + user.id}">Изменить</a>
+        <!-- Общее модальное окно для редактирования и удаления -->
+        <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="userModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="userModalLabel">Изменить пользователя</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="userForm">
+                            <div class="mb-3">
+                                <label th:for="id" class="col-form-label">Id</label>
+                                <input class="form-control" type="text" id="id" disabled>
+                            </div>
+                            <div class="mb-3">
+                                <label th:for="username" class="col-form-label">Name</label>
+                                <input class="form-control" type="text" id="username" placeholder="Username">
+                            </div>
+                            <div class="mb-3">
+                                <label th:for="email" class="col-form-label">Email</label>
+                                <input class="form-control" type="email" id="email" placeholder="Email">
+                            </div>
+                            <div class="mb-3">
+                                <label th:for="password" class="col-form-label">Password</label>
+                                <input class="form-control" type="password" id="password" placeholder="Password">
+                            </div>
+                            <div class="mb-3">
+                                <label th:for="roles" class="col-form-label">Roles</label>
+                                <select class="form-control" id="roles" multiple></select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        <button type="button" class="btn btn-danger" id="deleteButton" onclick="confirmDeleteUser()" style="display:none;">Удалить</button>
+                        <button type="button" class="btn btn-primary" id="saveButton" onclick="updateUser()">Сохранить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                    <!-- Modal for edit user -->
-                    <div th:replace="fragmentModalForm :: modalForm(methodMapping='patch', textBtn='Сохранить')"></div>
-                </td>
-                <td>
-                    <!-- Btn for delete user -->
-                    <a type="button"
-                       class="btn btn-danger"
-                       data-bs-toggle="modal"
-                       th:attr="data-bs-target=${'#deleteuser' + user.id}">Удалить</a>
 
-                    <!-- Modal for delete user -->
-                    <div th:replace="fragmentModalForm :: modalForm(methodMapping='delete', textBtn='Удалить пользователя')"></div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+
+        <!-- Таблица пользователей -->
+        <div class="p-3 bg-white border">
+            <table class="table table-striped border-top" id="userTable">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Roles</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!-- Сюда будет вставляться список пользователей -->
+                </tbody>
+            </table>
+        </div>
+
     </div>
 </div>
 </body>
