--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="https://www.thymeleaf.org">
     <head>
-        <title>Карточка пользователя</title>
+        <title th:text="'Страница ' + ${userFromPrincipal.getUsername()}"></title>
     </head>
     <body>
         <div layout:fragment="content">
