--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -56,7 +56,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                         <button type="button" class="btn btn-danger" id="deleteButton" onclick="confirmDeleteUser()" style="display:none;">Удалить</button>
-                        <button type="button" class="btn btn-primary" id="saveButton" onclick="updateUser()">Сохранить</button>
+                        <button type="button" class="btn btn-primary" id="updateButton" onclick="updateUser()">Сохранить</button>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 </tr>
                 </thead>
                 <tbody>
-
+                <!-- Сюда будет вставляться список пользователей -->
                 </tbody>
             </table>
         </div>
